mengubah typo dan mengubah posisi td2

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ Licence URI: https://www.os-templates.com/template-terms
 <p data-aos="fade-right" data-aos-duration="2000"  data-aos-delay="400">2.pembukaan pameran</p>
 <p data-aos="fade-right" data-aos-duration="2000"  data-aos-delay="500">3.pelaksanaan pameran.</p>
 <p data-aos="fade-right" data-aos-duration="2000"  data-aos-delay="600">4.Hiburan.</p>
-<p data-aos="fade-right" data-aos-duration="2000"  data-aos-delay="700">5.Persipan penutupan</p>
+<p data-aos="fade-right" data-aos-duration="2000"  data-aos-delay="700">5.Persiapan penutupan</p>
 <p data-aos="fade-right" data-aos-duration="2000"  data-aos-delay="800">6.Penutup.</p>
      <!--- <p class="btmspace-80 bold">Suspendisse porta ligula non elementum ultricies justo urna egestas metus ut ornare leo augue pharetra risus.</p> 
       <ul class="nospace group">
@@ -267,7 +267,7 @@ Licence URI: https://www.os-templates.com/template-terms
       </figure>
     </br>
   </br>
-<article class="one_half">
+<article class="center">
         <figure class="clear"><img src= "images/demo/td2.jpg"alt=""> <!--"images/demo/100x100.png"-->
           <figcaption>
             <h6 class="heading">Siti Komariah</h6>
